--- a/index.html
+++ b/index.html
@@ -1,63 +1,82 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Dr. Battery</title>
+    <title>Terms of Use - Dr. Battery</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 20px;
+            padding: 20px;
+            max-width: 800px;
         }
         h1, h2 {
             color: #333;
         }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        h2 {
+            font-size: 20px;
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
         p {
             margin-bottom: 15px;
+        }
+        ul {
+            margin: 10px 0;
+            padding-left: 20px;
         }
     </style>
 </head>
 <body>
+    <h1>Terms of Use</h1>
+    <p><em>Last updated: [Insert Date]</em></p>
+    <p>Welcome to Dr. Battery. By downloading or using this app, you agree to abide by the following Terms of Use. Please read them carefully, as they contain important information about your rights, obligations, and restrictions when using the app.</p>
 
-    <h1>Privacy Policy for Dr. Battery</h1>
-    <p><strong>Last updated:</strong> October 7, 2024</p>
+    <h2>1. Acceptance of Terms</h2>
+    <p>By accessing or using Dr. Battery ("the App"), you agree to be bound by these Terms of Use. If you do not agree, please do not use the App. We reserve the right to modify these terms at any time, and any changes will be effective upon posting. Your continued use of the App after modifications constitutes your acceptance of the revised terms.</p>
 
-    <p>At Dr. Battery, we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and share information when you use our application (the "App"). By using the App, you agree to the terms described in this Privacy Policy.</p>
+    <h2>2. Description of Service</h2>
+    <p>Dr. Battery provides battery health monitoring and management tools for your iOS device, including but not limited to battery diagnostics, optimization tips, and battery life tracking.</p>
 
-    <h2>1. Information We Collect</h2>
-    <p>Dr. Battery does not collect any personal information from its users. The App functions locally on your device and does not send any data, including information about your battery status, device performance, or app usage, to external servers.</p>
-    <p>However, the following types of non-personally identifiable information may be collected for the purpose of improving the App:</p>
+    <h2>3. User Responsibilities</h2>
+    <p>You agree to use the App only for lawful purposes and in compliance with all applicable laws and regulations. You must not:</p>
     <ul>
-        <li><strong>Device Information:</strong> This includes general details about your iPhone's hardware and software, such as battery health, device model, and operating system version.</li>
-        <li><strong>Usage Data:</strong> Anonymous usage statistics about how you interact with the App to help us improve its performance.</li>
+        <li>Use the App for any purpose that is fraudulent, unlawful, or otherwise in violation of these Terms of Use.</li>
+        <li>Attempt to interfere with the proper functioning of the App.</li>
+        <li>Copy, modify, distribute, or reverse engineer any part of the App without express permission.</li>
     </ul>
 
-    <h2>2. How We Use Your Information</h2>
-    <p>All information collected is used for the sole purpose of:</p>
-    <ul>
-        <li>Monitoring and analyzing app performance.</li>
-        <li>Providing insights to users about their battery health and device performance.</li>
-        <li>Ensuring compatibility with different iPhone models and iOS versions.</li>
-    </ul>
-    <p>We do not sell, trade, or rent your information to any third party.</p>
+    <h2>4. Intellectual Property</h2>
+    <p>All content, design, graphics, and functionality of Dr. Battery, as well as trademarks, logos, and service marks used in connection with the App, are the property of Dr. Battery or its licensors and are protected by intellectual property laws. Unauthorized use of any materials is prohibited.</p>
 
-    <h2>3. Data Retention</h2>
-    <p>Since Dr. Battery does not collect or store any personal data, there is no data retention policy for personal information. All data processed by the App remains on your device.</p>
+    <h2>5. Privacy Policy</h2>
+    <p>Your privacy is important to us. Please review our Privacy Policy, which outlines how we collect, use, and protect your personal information.</p>
 
-    <h2>4. Third-Party Services</h2>
-    <p>We may use third-party services such as analytics tools to help improve the functionality of the App. These services may collect and process non-personally identifiable information as described in their own privacy policies.</p>
+    <h2>6. Disclaimer of Warranties</h2>
+    <p>The App is provided "as-is" without warranties of any kind, either express or implied. We do not guarantee that the App will function without interruption or errors, nor do we warrant the accuracy or completeness of any information provided by the App. You acknowledge that your use of the App is at your sole risk.</p>
 
-    <h2>5. Security</h2>
-    <p>We take reasonable measures to protect the information processed by the App. Since no personal data is transmitted or stored, your privacy is well-protected.</p>
+    <h2>7. Limitation of Liability</h2>
+    <p>To the maximum extent permitted by law, Dr. Battery and its affiliates, employees, and licensors shall not be liable for any direct, indirect, incidental, or consequential damages arising from your use of, or inability to use, the App.</p>
 
-    <h2>6. Changes to This Privacy Policy</h2>
-    <p>We may update this Privacy Policy from time to time. Any changes will be posted within the App, and the updated date will be reflected at the top of this page. We encourage you to review this Privacy Policy periodically to stay informed about our practices.</p>
+    <h2>8. Third-Party Links and Content</h2>
+    <p>The App may contain links to third-party websites or services. Dr. Battery is not responsible for the content, privacy policies, or practices of any third-party websites or services. Accessing these third-party sites is at your own risk.</p>
 
-    <h2>7. Contact Us</h2>
-    <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-    <p><strong>Email:</strong> ravenpanna@gmail.com</p>
-    <p><strong>Address:</strong> Boerenbuurt 32, Leersum, 3956, Netherlands</p>
+    <h2>9. Termination</h2>
+    <p>We may terminate or suspend your access to the App at any time, without notice, for conduct that we believe violates these Terms of Use or is harmful to other users, us, or third parties.</p>
 
+    <h2>10. Governing Law</h2>
+    <p>These Terms of Use shall be governed by and construed in accordance with the laws of the Netherlands, without regard to its conflict of law principles. You agree to submit to the personal jurisdiction of the courts located in the Netherlands.</p>
+
+    <h2>11. Contact Us</h2>
+    <p>If you have any questions, concerns, or feedback regarding these Terms of Use or the App, please contact us at:</p>
+    <p><strong>Email:</strong> ravenpanna@gmail.com<br>
+       <strong>Address:</strong> Boerenbuurt 32, Leersum, 3956, Netherlands</p>
 </body>
 </html>
