--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <h1>Terms of Use</h1>
-    <p><em>Last updated: [Insert Date]</em></p>
+    <p><em>Last updated: October 7, 2024</em></p>
     <p>Welcome to Dr. Battery. By downloading or using this app, you agree to abide by the following Terms of Use. Please read them carefully, as they contain important information about your rights, obligations, and restrictions when using the app.</p>
 
     <h2>1. Acceptance of Terms</h2>
